[gd_scene load_steps=15 format=3 uid="uid://dp2qhxu6v58ec"]

[ext_resource type="Script" path="res://scenes/world/upper_world/wild_world.gd" id="1_uv3j1"]
[ext_resource type="PackedScene" uid="uid://c6ujb8e5n6kvp" path="res://scenes/world/tiles/temp_tilemap.tscn" id="2_ljv1v"]
[ext_resource type="PackedScene" uid="uid://dkwhb1psqv167" path="res://scenes/player/helipod/helipod.tscn" id="3_g8sxf"]
[ext_resource type="PackedScene" uid="uid://b6sepyerpol16" path="res://scenes/player/player.tscn" id="4_00w2v"]
[ext_resource type="PackedScene" uid="uid://dtg7dr1jl4ced" path="res://utils/components/velocity_component.tscn" id="5_sv2fb"]
[ext_resource type="Script" path="res://utils/components/players_velocity_component.gd" id="6_x0urb"]
[ext_resource type="PackedScene" uid="uid://t84dc3iv5p16" path="res://scenes/player/camear/player_camera.tscn" id="7_nvve0"]
[ext_resource type="Script" path="res://scenes/main/day_tracker_label.gd" id="8_lxkg7"]
[ext_resource type="Script" path="res://scenes/world/upper_world/player_detector_top.gd" id="9_5ylay"]

[sub_resource type="Gradient" id="Gradient_p47ib"]
offsets = PackedFloat32Array(0.0194805, 0.957792)
colors = PackedColorArray(0, 0, 1, 1, 0.177193, 0.737603, 0.228089, 1)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_uigu7"]
frequency = 0.2

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_v1v72"]
color_ramp = SubResource("Gradient_p47ib")
noise = SubResource("FastNoiseLite_uigu7")

[sub_resource type="SegmentShape2D" id="SegmentShape2D_i22yf"]

[sub_resource type="SegmentShape2D" id="SegmentShape2D_6fskt"]

[node name="WildWorld" type="Node2D"]
script = ExtResource("1_uv3j1")
noise_texture = SubResource("NoiseTexture2D_v1v72")

[node name="TempTilemap" parent="." instance=ExtResource("2_ljv1v")]

[node name="Helipod" parent="." node_paths=PackedStringArray("tile_map", "player") instance=ExtResource("3_g8sxf")]
position = Vector2(-108, 39)
tile_map = NodePath("../TempTilemap")
player = NodePath("../Player")

[node name="Player" parent="." node_paths=PackedStringArray("helipod") instance=ExtResource("4_00w2v")]
position = Vector2(-133, 58)
helipod = NodePath("../Helipod")

[node name="CameraRemote" parent="Player/General" index="4"]
remote_path = NodePath("../../../PlayerCamera")

[node name="VelocityComponent2" parent="Player/Components" index="1" node_paths=PackedStringArray("actor") instance=ExtResource("5_sv2fb")]
script = ExtResource("6_x0urb")
flight_gravity = 200.0
fly_up_speed = 80.0
fly_down_speed = 200.0
flight_acceleration = 400.0
actor = NodePath("../..")
friction = 600.0

[node name="PlayerCamera" parent="." instance=ExtResource("7_nvve0")]
position = Vector2(-133, 58)

[node name="UIRoot" type="CanvasLayer" parent="."]

[node name="DayTrackerLabel" type="Label" parent="UIRoot"]
offset_right = 40.0
offset_bottom = 23.0
text = "1"
script = ExtResource("8_lxkg7")

[node name="PlayerDetectorBot" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
script = ExtResource("9_5ylay")

[node name="Shape" type="CollisionShape2D" parent="PlayerDetectorBot"]
shape = SubResource("SegmentShape2D_i22yf")

[node name="PlayerDetectorTop" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
script = ExtResource("9_5ylay")

[node name="Shape" type="CollisionShape2D" parent="PlayerDetectorTop"]
shape = SubResource("SegmentShape2D_6fskt")

[connection signal="body_entered" from="PlayerDetectorBot" to="." method="_on_player_detector_bot_body_entered"]
[connection signal="body_entered" from="PlayerDetectorTop" to="." method="_on_player_detector_top_body_entered"]

[editable path="Player"]
[editable path="Player/Components/Hurtbox"]
[editable path="Player/StateMachine"]
